# open_money

./: CMakeLists.txt  README.md
resources/localizations/: en-us.csv  pt-br.csv
src/: graphics.cpp  graphics.h  interface.cpp  interface.h  localization.cpp  localization.h  main.cpp
